* config/i386/i386.h (ix86_expand_prologue): Do not emit pic register         load if "internal" visibility.         * doc/extend.texi: Document visibility meanings.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50240 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-03-02  Richard Henderson  <rth@redhat.com>
 
+	* config/i386/i386.h (ix86_expand_prologue): Do not emit pic register
+	load if "internal" visibility.
+	* doc/extend.texi: Document visibility meanings.
+
+2002-03-02  Richard Henderson  <rth@redhat.com>
+
 	* config/i386/i386.h (ENCODE_SECTION_INFO): MODULE_LOCAL_P applies
 	to functions as well.
 
