--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-03  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/20020103-1.c: Add other -D ppc variants.
+
 2002-03-02  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/other/classkey1.C: New test.
