--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-02  Per Bothner  <per@bothner.com>
+
+	* gcc.c (option_map):  Suport new --bootclasspath option.
+	--CLASSPATH is now just an alias for --classpath.
+
 2002-03-02  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.h (ix86_expand_prologue): Do not emit pic register
