--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-03  Richard Henderson  <rth@redhat.com>
+
+	* c-decl.c (start_decl): Initialized variables are not common.
+
 2002-03-02  Per Bothner  <per@bothner.com>
 
 	* gcc.c (option_map):  Suport new --bootclasspath option.
