--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-03 Mark Wielaard <mark@klomp.org>
+
+	* java/util/Timer (TaskQueue.stop): set elements to zero.
+
 2002-02-28  Anthony Green  <green@redhat.com>
 
 	* java/lang/reflect/natMethod.cc (result): Add void* element.
