* attribs.c (init_attributes, decl_attributes): Use ARRAY_SIZE in 	lieu of explicit sizeof/sizeof. 	* i386.c (override_options, ix86_init_mmx_sse_builtins, 	ix86_expand_builtin): Likewise. 	* mips.c (mips_add_gc_roots): Likewise. 	* mmix.c (mmix_output_condition): Likewise. 	* rs6000.c (rs6000_override_options, altivec_expand_builtin, 	altivec_init_builtins): Likewise. 	* sparc.c (mark_ultrasparc_pipeline_state): Likewise. 	* cppexp.c (Nsuff, parse_number): Likewise. 	* cppinit.c (builtin_array_end): Likewise. 	* gcc.c (n_default_compilers, process_command): Likewise. 	* genpreds.c (output_predicate_decls): Likewise. 	* ggc-page.c (NUM_EXTRA_ORDERS): Likewise. 	* lcm.c (N_ENTITIES): Likewise. 	* stor-layout.c (set_sizetype): Likewise.
ada:
	* utils.c (init_gnat_to_gnu, init_gigi_decls): Use ARRAY_SIZE in
	lieu of explicit sizeof/sizeof.

cp:
	* decl.c (cxx_init_decl_processing): Use ARRAY_SIZE in lieu of
	explicit sizeof/sizeof.
	* decl2.c (cxx_decode_option): Likewise.
	* lex.c (init_reswords, REDUCE_LENGTH, TOKEN_LENGTH): Likewise.

java:
	* class.c (init_class_processing): Use ARRAY_SIZE in lieu of
	explicit sizeof/sizeof.
	* decl.c (java_init_decl_processing): Likewise.
	* jcf-parse.c (init_jcf_parse): Likewise.
	* parse.y (init_src_parse): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50255 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,22 @@
+2002-03-03  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* attribs.c (init_attributes, decl_attributes): Use ARRAY_SIZE in
+	lieu of explicit sizeof/sizeof.
+	* i386.c (override_options, ix86_init_mmx_sse_builtins,
+	ix86_expand_builtin): Likewise.
+	* mips.c (mips_add_gc_roots): Likewise.
+	* mmix.c (mmix_output_condition): Likewise.
+	* rs6000.c (rs6000_override_options, altivec_expand_builtin,
+	altivec_init_builtins): Likewise.
+	* sparc.c (mark_ultrasparc_pipeline_state): Likewise.
+	* cppexp.c (Nsuff, parse_number): Likewise.
+	* cppinit.c (builtin_array_end): Likewise.
+	* gcc.c (n_default_compilers, process_command): Likewise.
+	* genpreds.c (output_predicate_decls): Likewise.
+	* ggc-page.c (NUM_EXTRA_ORDERS): Likewise.
+	* lcm.c (N_ENTITIES): Likewise.
+	* stor-layout.c (set_sizetype): Likewise.
+	
 2002-03-03  Richard Henderson  <rth@redhat.com>
 
 	* toplev.c (rest_of_decl_compilation): Do not invoke make_decl_rtl
