--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-03  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* decl.c (cxx_init_decl_processing): Use ARRAY_SIZE in lieu of
+	explicit sizeof/sizeof.
+	* decl2.c (cxx_decode_option): Likewise.
+	* lex.c (init_reswords, REDUCE_LENGTH, TOKEN_LENGTH): Likewise.
+
 2002-03-02  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/775
