* 1750a.h, a29k.h, alpha.h, arc.h, arm.h, avr.h, c4x.h, clipper.h, 	convex.h, cris.h, d30v.h, dsp16xx.h, elxsi.h, fr30.h, h8300.h, 	i370.h, i386.h, i860.h, i960.h, ia64.h, m32r.h, m68hc11.h, m68k.h, 	m88k.h, mcore.h, mips.h, mmix.h, mn10200.h, mn10300.h, ns32k.h, 	pa.h, pdp11.h, pj.h, romp.h, rs6000.h, s390.h, sh.h, sparc.h, 	stormy16.h, v850.h, vax.h, we32k.h, xtensa.h (BITS_PER_WORD): 	Delete. 	* defaults.h (BITS_PER_WORD): Define. 	* doc/tm.texi (BITS_PER_WORD): Document default value.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50257 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -928,7 +928,8 @@ unit (byte).  If you do not define this macro the default is 8.
 
 @findex BITS_PER_WORD
 @item BITS_PER_WORD
-Number of bits in a word; normally 32.
+Number of bits in a word.  If you do not define this macro, the default
+is @code{BITS_PER_UNIT * UNITS_PER_WORD}.
 
 @findex MAX_BITS_PER_WORD
 @item MAX_BITS_PER_WORD
