--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-03  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc_release: Make snapshots come from the 3.1 branch.
+
 2002-02-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* update_version: Automatically update version files on all
