--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-03  Richard Henderson  <rth@redhat.com>
+
+	* toplev.c (rest_of_decl_compilation): Revert last two changes.
+
 2002-03-03  Zack Weinberg  <zack@codesourcery.com>
 
 	* emit-rtl.c, final.c, fold-const.c, gengenrtl.c, optabs.c,
