--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-04  Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
+
+	* c4x-protos.h, c4x.h, c4x.c, c4x.md: Add new functions
+	nonimmediate_src_operand and nonimmediate_lsrc_operand to
+	disallow ZERO_EXTEND with CONST_INT or CONST_DOUBLE.
+
 2002-03-03  Richard Henderson  <rth@redhat.com>
 
 	* toplev.c (rest_of_decl_compilation): Revert last two changes.
