--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-03  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* Makefile.am: Use -bootclasspath, not -CLASSPATH.
+	* Makefile.in: Rebuilt.
+
 2002-03-03 Mark Wielaard <mark@klomp.org>
 
 	* java/util/Timer (TaskQueue.stop): set elements to zero.
