--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar  4 15:33:54 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* toplev.c (rest_of_compilation): Cleanup CFG after dead jumptables
+	removal
+
 2002-03-03  Aldy Hernandez  <aldyh@redhat.com>
 
         * config.gcc (powerpc-*-eabialtivec*): Use t-ppcendian.
