--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-04  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.c-torture/compile/20020304-1.c: New test case
+	(from PR c/5830).
+
 2002-03-03  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.dg/20020103-1.c: Add other -D ppc variants.
