New test case (from PR c/5830).
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50283 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_0-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-04  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.c-torture/compile/20020304-1.c: New test case
+	(from PR c/5830). 
+
 2002-02-20  Release Manager
 
 	* GCC 3.0.4 Released.
