* xmalloc.c (xmalloc_fail): Clarify error message further.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50287 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-04  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* xmalloc.c (xmalloc_fail): Clarify error message further.
+
 2002-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* xmalloc.c (xmalloc_fail): Clarify error message.
