2002-03-04  Phil Edwards  <pme@gcc.gnu.org>
	* configure.in:  Add --enable-install-libiberty option.
	* Makefile.in (INSTALLED_HEADERS):  New variable.
	(install_to_libdir):  Possibly also copy headers.
	* configure:  Regenerated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50288 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-04  Phil Edwards  <pme@gcc.gnu.org>
+
+	* configure.in:  Add --enable-install-libiberty option.
+	* Makefile.in (INSTALLED_HEADERS):  New variable.
+	(install_to_libdir):  Possibly also copy headers.
+	* configure:  Regenerated.
+
 2002-03-04  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* xmalloc.c (xmalloc_fail): Clarify error message further.
