--- a/dfa-branch/gcc/ChangeLog
+++ b/dfa-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-04  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* doc/passes.texi: Add missed information about genattrtab.
+
 2002-03-01  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* genautomata.c (output_automata_list_transition_code): Check
