--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-05  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* configure.in: Increase required makeinfo version to 4.1.
+	* configure: Regenerate.
+
 2002-03-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* doc/include/texinfo.tex: Update to version 2002-03-01.06.
