* config.gcc (*-*-netbsd*): Add t-slibgcc-elf-ver to tmake_file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50297 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-04  Krister Walfridsson  <cato@df.lth.se>
+
+	* config.gcc (*-*-netbsd*): Add t-slibgcc-elf-ver to tmake_file.
+
 2002-03-05  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* configure.in: Increase required makeinfo version to 4.1.
