--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Richard Henderson  <rth@redhat.com>
+
+        * rs6000.h (TOTAL_ALTIVEC_REGS): Fix off-by-one error.
+
 2002-03-04  Geoffrey Keating  <geoffk@redhat.com>
 
 	* toplev.c (documented_lang_options): Document more
