2002-03-05  Richard Henderson  <rth@redhat.com>
        * rs6000.h (TOTAL_ALTIVEC_REGS): Fix off-by-one error.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50302 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Richard Henderson  <rth@redhat.com>
+
+        * config/rs6000/rs6000.h (TOTAL_ALTIVEC_REGS): Fix off-by-one error.
+
 2002-03-04  Krister Walfridsson  <cato@df.lth.se>
 
 	* config.gcc (*-*-netbsd*): Add t-slibgcc-elf-ver to tmake_file.
