--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-05  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* builtins.c(cos_builtin): method_return_type ATTRIBUTE_UNUSED
+	* builtins.c(sin_builtin): Likewise
+	* builtins.c(sqrt_builtin): Likewise
+
 2002-03-02  Per Bothner  <per@bothner.com>
 
 	Make --CLASSPATH by a synonym for --classpath and -classpath.
