* ssa-ccp.c (ssa_ccp_substitute_constants): Don't crash if def 	is NULL.
	* gcc.dg/20020304-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50313 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* ssa-ccp.c (ssa_ccp_substitute_constants): Don't crash if def
+	is NULL.
+
 2002-03-05  Richard Henderson  <rth@redhat.com>
 
         * config/rs6000/rs6000.h (TOTAL_ALTIVEC_REGS): Fix off-by-one error.
