--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020304-1.c: New test.
+
 2002-03-04  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.c-torture/compile/20020304-1.c: New test case
