* expmed.c (emit_store_flag): Don't test BITS_PER_WORD * 2 	wide volatile memory by parts.
	* gcc.c-torture/compile/20020304-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50314 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-05  Jakub Jelinek  <jakub@redhat.com>
 
+	* expmed.c (emit_store_flag): Don't test BITS_PER_WORD * 2
+	wide volatile memory by parts.
+
+2002-03-05  Jakub Jelinek  <jakub@redhat.com>
+
 	* ssa-ccp.c (ssa_ccp_substitute_constants): Don't crash if def
 	is NULL.
 
