--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-05  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* snapshot-README: Note that snapshots come from the 3.1 branch.
+	Update list of files.
+
 2002-03-03  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc_release: Make snapshots come from the 3.1 branch.
