--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Tue Mar  5 18:31:27 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfg.c (dump_flow_info): Warn about profile mismatches.
+	* cfgrtl.c (verify_flow_info): Few aditional sanity checks.
+	(purge_dead_edges): Remove REG_BR_PROB notes on simplejumps.
+
 2002-03-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* expmed.c (emit_store_flag): Don't test BITS_PER_WORD * 2
