--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* mklibgcc.in: Prepend a tab before .hidden, add $flags to gcc
+	-r command line.  Don't hide any symbols if not building
+	shared libgcc.
+
 Tue Mar  5 18:31:27 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfg.c (dump_flow_info): Warn about profile mismatches.
