--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-05  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* docs/html/17_intro/RELEASE-NOTES: Update.
+	* README: Format subdirectories.
+
 2002-03-05  Paolo Carlini  <pcarlini@unitus.it>
 
 	libstdc++/5816
@@ -52,6 +57,7 @@
 
 2002-02-26  Benjamin Kosnik  <bkoz@redhat.com>
 
+	libstdc++/3983
 	* include/bits/basic_ios.tcc (basic_ios::init): Set _M_fill to zero.
 	Adjust comment.
 	* include/bits/basic_ios.h (basic_ios::_M_fill): Make mutable.
