MAINTAINERS (Write After Approval): Add myself.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50335 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* MAINTAINERS (Write After Approval): Add myself.
+
 2002-02-28  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in (libstdcxx_flags): Don't add libstdc++-v3 flags for
