--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* gthr-win32.h (__GTHREAD_MUTEX_INIT_DEFAULT): Define.
+
 2002-03-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* mklibgcc.in: Prepend a tab before .hidden, add $flags to gcc
