--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-05  Tom Tromey  <tromey@redhat.com>
+
+	* jni.cc (_Jv_LookupJNIMethod): Throw UnsatisfiedLinkError, not
+	AbstractMethodError.
+
 2002-03-03  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* Makefile.am: Use -bootclasspath, not -CLASSPATH.
