--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-05  Tom Tromey  <tromey@redhat.com>
+
+	* jni.cc (_Jv_LookupJNIMethod): Throw UnsatisfiedLinkError, not
+	AbstractMethodError.
+
 2002-03-04  Adam Megacz <adam@xwt.org>
 
 	* java/net/natInetAddress.cc: Changed USE_WINSOCK to WIN32, added
