* config/i386/i386.md (floatsidf2): Conditionalize on hard-float.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50339 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -5136,7 +5136,7 @@
 (define_expand "floatsidf2"
   [(set (match_operand:DF 0 "register_operand" "")
 	(float:DF (match_operand:SI 1 "nonimmediate_operand" "")))]
-  ""
+  "TARGET_80387 || TARGET_SSE2"
   "")
 
 (define_insn "*floatsidf2_i387"
