--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.md (floatsidf2): Conditionalize on hard-float.
+
 2002-03-05  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* gthr-win32.h (__GTHREAD_MUTEX_INIT_DEFAULT): Define.
