--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-05  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.md (floatsidf2): Conditionalize on hard-float.
+
 2002-03-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* mklibgcc.in: Prepend a tab before .hidden, add $flags to gcc
