--- a/gcc-3_1-branch/gcc/config/i386/i386.md
+++ b/gcc-3_1-branch/gcc/config/i386/i386.md
@@ -5136,7 +5136,7 @@
 (define_expand "floatsidf2"
   [(set (match_operand:DF 0 "register_operand" "")
 	(float:DF (match_operand:SI 1 "nonimmediate_operand" "")))]
-  ""
+  "TARGET_80387 || TARGET_SSE2"
   "")
 
 (define_insn "*floatsidf2_i387"
